--- a/frontend/src/assets/Navbar.css
+++ b/frontend/src/assets/Navbar.css
@@ -3,18 +3,17 @@
     --second-color: #dfcdc3;
     --black: #13131a;
     --white: #fff;
-    --bg: #3c4245;
-    --hbg: #5f6769;
+    --bg: #718096;
+    --hbg: white;
     --border: 1px solid #ddd;
 }
 
-body{
+body {
     margin: 0;
     padding: 0px;
     box-sizing: border-box;
     font-family: sans-serif;
 }
-
 
 .navbar {
     background-color: #ffffff;
@@ -46,6 +45,22 @@ body{
 .navbar-start {
     display: flex;
     align-items: center;
+    justify-items: center;
+}
+.navbar-start .menu-button {
+    display: flex;
+    padding: 20%;
+    border: 1px solid var(--bg);
+    border-radius: 6px;
+    background-color: transparent;
+    cursor: pointer;
+    font-size: 24px;
+    color: var(--bg);
+}
+.navbar-start .menu-button:hover {
+    color: var(--hbg);
+    background-color: var(--bg);
+    transition: background-color 0.2s;
 }
 
 .navbar-end {
@@ -59,17 +74,19 @@ body{
 }
 
 .notification-button {
-    padding: 8px;
+    padding: auto;
     background-color: transparent;
-    color: #718096;
-    border: none;
+    color: var(--bg);
+    border: 1px solid var(--bg);
     border-radius: 8px;
-    transition: color 0.2s,
+    cursor: pointer;
+    font-size: 24px;
 }
 
 .notification-button:hover {
-    color: #1a202c;
-    background-color: #f7fafc;
+    color: var(--hbg);
+    background-color: var(--bg);
+    transition: background-color 0.2s;
 }
 
 .notification-badge {
@@ -144,22 +161,25 @@ body{
 
 .profile-button {
     display: flex;
+    padding: 8%;
     align-items: center;
-    
+    cursor: pointer;
+    font-size: 24px;
     border: none;
-
-    border-radius: 8px;
+    border-radius: 9999px;
+    transition: background-color 0.2s;
 }
 
 .profile-button:hover {
-    background-color: #4a5568;
+    background-color: var(--bg);
+
+    border-radius: 9999px;
 }
 
 .profile-image {
     height: 32px;
     width: 32px;
     border-radius: 9999px;
-    object-fit: cover;
 }
 
 .sidebar {
@@ -193,13 +213,42 @@ body{
     border: none;
     cursor: pointer;
     font-size: 24px;
+    color: #2d3748;
+}
+
+.close-btn:hover {
+    color: #718096;
+
+    transition: color 0.2s;
 }
 
 .sidebar-content {
     padding: 16px;
 }
+.sidebar-content .link-icon {
+    text-decoration: none;
+    font-size: 24px;
+    display: flex;
+    align-items: center;
+    padding: 10px;
+    margin-bottom: 8px;
+    border-radius: 8px;
+    transition: background-color 0.2s;
+    cursor: pointer;
+    color: var(--bg);
+}
 
-.sidebar-icon {
+.sidebar-content .link-icon:hover {
+    color: var(--hbg);
+    background-color: var(--bg);
+    transition: background-color 0.2s;
+}
+.sidebar-content .link-icon svg {
+    margin-right: 8px;
+}
+
+/* .sidebar-icon {
+    font-size: 24px;
     display: flex;
     align-items: center;
     padding: 12px;
@@ -207,20 +256,34 @@ body{
     border-radius: 8px;
     transition: background-color 0.2s;
     cursor: pointer;
-}
+    color: var(--bg);
+} */
 
-.sidebar-icon:hover {
-    background-color: #f7fafc;
-}
+/* .sidebar-icon:hover {
+    color: var(--hbg);
+    background-color: var(--bg);
+    transition: background-color 0.2s;
+} */
 
-.sidebar-icon svg {
+/* .sidebar-icon svg {
     margin-right: 8px;
-}
-
-.sidebar-icon span {
+} */
+/* .sidebar-icon-text {
+    text-decoration: none;
     font-size: 16px;
     color: #2d3748;
 }
+.sidebar-icon-text:hover {
+    color: white;
+    transition: color 0.2s;
+   
+} */
+/* .sidebar-icon span {
+    
+    text-decoration: none;
+    font-size: 16px;
+    color: #2d3748;
+} */
 
 .fixed-button {
     position: fixed;
