--- a/frontend/src/assets/Navbar.css
+++ b/frontend/src/assets/Navbar.css
@@ -23,14 +23,15 @@ body {
     z-index: 0;
     top: 0;
     left: 0;
+    
 }
 
 .navbar-container {
     max-width: 1120px;
-    margin: 0 auto;
-    padding: 0 16px;
+    margin: 0;
+    padding: 0 20px;
     display: flex;
-    justify-content: space-between;
+    /* justify-content: space-between; */
     align-items: center;
     height: 64px;
 }
@@ -38,14 +39,13 @@ body {
 .navbar-content {
     display: flex;
     justify-content: space-between;
-    align-items: center;
+    /* align-items: center; */
     width: 100%;
 }
 
 .navbar-start {
     display: flex;
-    align-items: center;
-    justify-items: center;
+    
 }
 .navbar-start .menu-button {
     display: flex;
@@ -64,8 +64,10 @@ body {
 }
 
 .navbar-end {
+    margin-right: 0px;
     display: flex;
-    align-items: center;
+
+    align-items: end;
     gap: 16px;
 }
 
@@ -162,7 +164,7 @@ body {
 .profile-button {
     display: flex;
     padding: 8%;
-    align-items: center;
+    
     cursor: pointer;
     font-size: 24px;
     border: none;
@@ -247,43 +249,7 @@ body {
     margin-right: 8px;
 }
 
-/* .sidebar-icon {
-    font-size: 24px;
-    display: flex;
-    align-items: center;
-    padding: 12px;
-    margin-bottom: 8px;
-    border-radius: 8px;
-    transition: background-color 0.2s;
-    cursor: pointer;
-    color: var(--bg);
-} */
 
-/* .sidebar-icon:hover {
-    color: var(--hbg);
-    background-color: var(--bg);
-    transition: background-color 0.2s;
-} */
-
-/* .sidebar-icon svg {
-    margin-right: 8px;
-} */
-/* .sidebar-icon-text {
-    text-decoration: none;
-    font-size: 16px;
-    color: #2d3748;
-}
-.sidebar-icon-text:hover {
-    color: white;
-    transition: color 0.2s;
-   
-} */
-/* .sidebar-icon span {
-    
-    text-decoration: none;
-    font-size: 16px;
-    color: #2d3748;
-} */
 
 .fixed-button {
     position: fixed;
